[package]
name = "fjs_native_extensions"
version = "0.1.1"
edition = "2024"
license = "MIT"

[dependencies]
linkme = "0.3"
rquickjs = { git = "https://github.com/DelSkayn/rquickjs.git", rev = "144ad6472cd85b472b816c8fe5a166e74059cff5", version = "0.12.0", features = ["full-async", "bindgen", "loader", "dyn-load", "parallel", "macro", "futures"] }
